<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".About">

	<TextView
		android:id="@+id/tvApplicationVersion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="250dp"
		android:layout_marginRight="250dp"
		android:layout_marginBottom="9dp"
		android:text="@string/tvApplicationVersion"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/tvApplicationDeveloper"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tvApplicationDeveloper"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="11dp"
		android:layout_marginEnd="162dp"
		android:layout_marginRight="162dp"
		android:layout_marginBottom="12dp"
		android:text="@string/tvApplicationDeveloper"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/tvApplicationDate"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvApplicationVersion" />

	<TextView
		android:id="@+id/tvApplicationDate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="11dp"
		android:layout_marginEnd="112dp"
		android:layout_marginRight="112dp"
		android:layout_marginBottom="11dp"
		android:text="@string/tvApplicationDate"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/tvApplicationUsage"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvApplicationDeveloper" />

	<TextView
		android:id="@+id/tvApplicationUsage"
		android:layout_width="381dp"
		android:layout_height="123dp"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="11dp"
		android:layout_marginEnd="14dp"
		android:layout_marginRight="14dp"
		android:layout_marginBottom="450dp"
		android:text="@string/tvApplicationUsage"
		android:textSize="24sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvApplicationDate" />
</androidx.constraintlayout.widget.ConstraintLayout>